# sopht-backend

./: .coveragerc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
sopht/numeric/eulerian_grid_ops/poisson_solver_3d/: FastDiagPoissonSolver3D.py
sopht/numeric/eulerian_grid_ops/stencil_ops_2d/: __init__.py  advection_flux_2d.py  brinkmann_penalise_2d.py  char_func_from_level_set_2d.py  diffusion_flux_2d.py  diffusion_timestep_2d.py  elementwise_ops_2d.py  inplane_field_curl_2d.py  outplane_field_curl_2d.py  penalise_field_boundary_2d.py  update_vorticity_from_velocity_forcing_2d.py
sopht/numeric/eulerian_grid_ops/stencil_ops_3d/: __init__.py  additive_laplacian_filter.py  advection_flux_3d.py  brinkmann_penalise_3d.py  char_func_from_level_set_3d.py  curl_3d.py  diffusion_flux_3d.py  diffusion_timestep_3d.py  elementwise_ops_3d.py  multiplicative_laplacian_filter.py  penalise_field_boundary_3d.py  update_vorticity_from_velocity_forcing_3d.py  vorticity_stretching_flux_3d.py  vorticity_stretching_timestep_3d.py
sopht/utils/: IO.py  __init__.py  precision.py  pyst_kernel_config.py
tests/test_numeric/test_eulerian_grid_ops/test_poisson_solver_3d/: test_unbounded_poisson_solver_3d.py
tests/test_numeric/test_eulerian_grid_ops/test_stencil_ops_2d/: test_advection_flux_2d.py  test_advection_timestep_2d.py  test_diffusion_flux_2d.py  test_diffusion_timestep_2d.py  test_elementwise_ops_2d.py  test_inplane_field_curl_2d.py  test_outplane_field_curl_2d.py  (+1 more)
tests/test_utils/: test_io_2d.py  test_io_3d.py  test_precision.py
(+11 files in other folders)
