[tool.poetry]
name = "sopht-backend"
version = "0.0.1"
description = "Scalable One-stop Platform for Hydroelastic Things (SOPHT) backend"
authors = ["Yashraj Bhosale <bhosale2@illinois.edu>"]
license = "MIT"
# ...
packages = [
    { include = "sopht" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20.0"
numba = "^0.55"
pystencils = "^1.0"
scipy = "^1.7.3"
sympy = "^1.9"
pyfftw = "^0.13.0"
psutil = "^5.9.0"
h5py = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"
flake8 = "^4.0.1"
coverage = "^6.3.2"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''
